--- a/app/assets/stylesheets/react/_select-dropdown.scss
+++ b/app/assets/stylesheets/react/_select-dropdown.scss
@@ -241,6 +241,7 @@
 
 .Select--multi .Select-multi-value-wrapper {
   display: inline-block;
+  padding-bottom: 5px;
 }
 
 .Select .Select-aria-only {
@@ -338,14 +339,10 @@
 }
 
 .Select--multi .Select-value {
-  background-color: #ebf5ff;
-  /* Fallback color for IE 8 */
-  background-color: rgba(0, 126, 255, 0.08);
-  border-radius: 2px;
-  border: 1px solid #c2e0ff;
-  /* Fallback color for IE 8 */
-  border: 1px solid rgba(0, 126, 255, 0.24);
-  color: #007eff;
+  background-color: #d6d7d9;
+  padding: 0px 4px;
+  border-radius: 3px;
+  color: black;
   display: inline-block;
   font-size: 0.9em;
   line-height: 1.4;
@@ -364,7 +361,7 @@
   border-bottom-right-radius: 2px;
   border-top-right-radius: 2px;
   cursor: default;
-  padding: 2px 5px;
+  padding: 5px 5px;
 }
 
 .Select--multi a.Select-value-label {
@@ -378,21 +375,22 @@
 }
 
 .Select--multi .Select-value-icon {
+  font-size: 20px;
+  font-weight: 900;
+  text-decoration: bold;
+  float: right;
   cursor: pointer;
   border-bottom-left-radius: 2px;
   border-top-left-radius: 2px;
-  border-right: 1px solid #c2e0ff;
-  /* Fallback color for IE 8 */
-  border-right: 1px solid rgba(0, 126, 255, 0.24);
-  padding: 1px 5px 3px;
+  padding: 2px 5px 3px;
 }
 
 .Select--multi .Select-value-icon:hover,
 .Select--multi .Select-value-icon:focus {
-  background-color: #d8eafd;
+  //background-color: #d8eafd;
   /* Fallback color for IE 8 */
-  background-color: rgba(0, 113, 230, 0.08);
-  color: #0071e6;
+  //background-color: rgba(0, 113, 230, 0.08);
+  //color: #0071e6;
 }
 
 .Select--multi .Select-value-icon:active {
