Adding read more tags feature if there are too many tags

--- a/app/assets/stylesheets/reader/_document_list.scss
+++ b/app/assets/stylesheets/reader/_document_list.scss
@@ -10,6 +10,11 @@ $tag-backgrond-color: #d6d7d9;
     cursor: pointer;
   }
 
+  .hidden {
+    display: none;
+  }
+
+
   i {
     margin: 0;
   }
@@ -33,14 +38,18 @@ $tag-backgrond-color: #d6d7d9;
     font-weight: bold;
     margin: 3px;
   }
-
-  .document-list-issue-tag {
-    display: inline-block;
-    background: $tag-backgrond-color;
-    border-radius: 3px;
-    padding: 4px 7px;
-    text-align: center;
-    margin: 3px;
+  .document-list-issue-tags {
+    max-width: 225px;
+    .document-list-issue-tag {
+      display: inline-block;
+      background: $tag-backgrond-color;
+      border-radius: 3px;
+      padding: 4px 7px;
+      text-align: center;
+      margin: 3px;
+      max-width: 225px;
+      word-wrap: break-word;
+    }
   }
 
 }
