--- a/app/assets/stylesheets/reader/_document_list.scss
+++ b/app/assets/stylesheets/reader/_document_list.scss
@@ -14,6 +14,9 @@ $tag-backgrond-color: #d6d7d9;
     display: none;
   }
 
+  .see-more-link-toggle {
+    display: inline-block;
+  }
 
   i {
     margin: 0;
