--- a/app/assets/stylesheets/_main.scss
+++ b/app/assets/stylesheets/_main.scss
@@ -326,3 +326,10 @@ select {
 .cf-icon-button {
   cursor: pointer;
 }
+
+.cf-sticky-header {
+  position: sticky;
+  top: 0;
+  background-color: $color-white;
+}
+
