--- a/app/assets/stylesheets/_main.scss
+++ b/app/assets/stylesheets/_main.scss
@@ -353,3 +353,39 @@ select {
 .cf-help-divider {
   margin: 1rem 0;
 }
+
+// add to commons
+.cf-display-1 {
+  font-weight: 700;
+  font-size: 52px;
+  line-height: 1.3em; /*/68px;*/
+}
+
+// add to commons
+.cf-display-2 {
+  font-weight: 300;
+  font-size: 44px;
+  line-height: 1.3em; /*/57px;*/
+}
+
+// add to commons
+.cf-lead-paragraph {
+  font-weight: 300;
+  font-size: 22px;
+  line-height: 1.5em; /*/33px;*/
+}
+
+// add to commons
+.cf-body-copy {
+  font-weight: 400;
+  font-size: 17px;
+  line-height: 1.5em; /*/26px;*/
+}
+
+// add to commons
+.cf-italic-body-copy {
+  font-style: italic;
+  font-weight: 400;
+  font-size: 17px;
+  line-height: 1.5em; /*/26px;*/
+}
