--- a/app/assets/stylesheets/_main.scss
+++ b/app/assets/stylesheets/_main.scss
@@ -358,28 +358,28 @@ select {
 .cf-display-1 {
   font-weight: 700;
   font-size: 52px;
-  line-height: 1.3em; /*/68px;*/
+  line-height: 1.3em;
 }
 
 // add to commons
 .cf-display-2 {
   font-weight: 300;
   font-size: 44px;
-  line-height: 1.3em; /*/57px;*/
+  line-height: 1.3em;
 }
 
 // add to commons
 .cf-lead-paragraph {
   font-weight: 300;
   font-size: 22px;
-  line-height: 1.5em; /*/33px;*/
+  line-height: 1.5em;
 }
 
 // add to commons
 .cf-body-copy {
   font-weight: 400;
   font-size: 17px;
-  line-height: 1.5em; /*/26px;*/
+  line-height: 1.5em;
 }
 
 // add to commons
@@ -387,5 +387,5 @@ select {
   font-style: italic;
   font-weight: 400;
   font-size: 17px;
-  line-height: 1.5em; /*/26px;*/
+  line-height: 1.5em;
 }
