--- a/app/assets/stylesheets/_main.scss
+++ b/app/assets/stylesheets/_main.scss
@@ -314,3 +314,20 @@ select {
 .cf-form-textinput {
   margin-bottom: 40px;
 }
+
+// hearings
+.cf-hearings {
+  width: 85vw;
+  margin-left: auto;
+  margin-right: auto;
+
+  .dockets {
+    td {
+      text-transform: capitalize;
+    }
+
+    td:nth-child(2) {
+      text-transform: none;
+    }
+  }
+}
