--- a/app/views/hearings/dockets/index.html.erb
+++ b/app/views/hearings/dockets/index.html.erb
@@ -1,2 +1,7 @@
-<%# react_component goes here %>
-<p><%= current_user_dockets.map(&:to_hash).to_s %></p>
+<% content_for :page_title do %>&nbsp &gt &nbsp Schedule<% end %>
+
+<% content_for :full_page_content do %>
+  <%= react_component("Hearings", props: {
+    dockets: current_user_dockets.map(&:to_hash)
+  }) %>
+<% end %>
