adding the next pdf document footer

--- a/app/assets/stylesheets/_reviewer.scss
+++ b/app/assets/stylesheets/_reviewer.scss
@@ -479,3 +479,9 @@ input[type="search"].cf-search-input-with-close {
 .cf-pdf-center-text {
   text-align: center;
 }
+
+.cf-pdf-next-document {
+  background-color: $color-primary-alt-lightest;
+  padding-left: 40px;
+  padding-right: 40px;
+}
