correct styling for previous and next bars

--- a/app/assets/stylesheets/_reviewer.scss
+++ b/app/assets/stylesheets/_reviewer.scss
@@ -483,18 +483,25 @@ input[type="search"].cf-search-input-with-close {
   text-align: center;
 }
 
-.cf-pdf-next-previous-document {
+.cf-pdf-banner {
   background-color: $color-primary-alt-lightest;
   padding-left: 40px;
   padding-right: 40px;
   position: absolute;
   z-index: 15;
   opacity: 1;
-  bottom: 50px;
-  display: flex;
   height: 40px;
   width: 100%;
+
   p {
     margin-top: 10px;
   }
+}
+
+.cf-pdf-next-document {
+  bottom: 50px;
+}
+
+.cf-pdf-prev-document {
+  top: 50px;
 }
