--- a/app/assets/stylesheets/_reviewer.scss
+++ b/app/assets/stylesheets/_reviewer.scss
@@ -59,7 +59,8 @@ $bookmark-yellow: #efdf1a;
 }
 
 .cf-pdf-page {
-  margin: 20px 0;
+  // 200px margin is placeholder to show wide margins between documents
+  margin: 200px 0;
   width: 100%;
 }
 
